--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,13 @@
 version: "3.8"
    
 services:
-  web:
-    build: .
+  api:
+    build:
+      context: .
+      dockerfile: Dockerfile
     command: npm run start
     volumes:
-      - /usr/src/app
+      - ".:/usr/src/app"
     environment:
       DB_HOST: "db"
     ports:
@@ -20,9 +22,11 @@ services:
   db:
     image: postgres
     environment:
-      - POSTGRES_DB=vinyls
+      - POSTGRES_DB=vynils
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
+    volumes:
+      - "./data/postgres:/var/lib/postgresql"
     ports:
       - "5432:5432"
     networks:
